--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -47,16 +47,16 @@
     <div class="row">
       <div class="col-sm-6 col-md-4 mb-4">
         <figure>
-          <a href="9.1. No estamos en guerra (Youtube/Galeria CIMA).jpg" target="_blank">
-            <img src="9.1. No estamos en guerra (Youtube/Galeria CIMA).jpg" class="thumb" alt="No estamos en guerra">
+          <a href="9.1. No estamos en guerra.jpg" target="_blank">
+            <img src="9.1. No estamos en guerra.jpg" class="thumb" alt="No estamos en guerra">
           </a>
           <figcaption>No estamos en guerra<br><small><em>(YouTube / Galería CIMA)</em></small></figcaption>
         </figure>
       </div>
       <div class="col-sm-6 col-md-4 mb-4">
         <figure>
-          <a href="9.2. La Marcha mas Grande (BBC/Susana Hidalgo).jpeg" target="_blank">
-            <img src="9.2. La Marcha mas Grande (BBC/Susana Hidalgo).jpeg" class="thumb" alt="La Marcha más Grande">
+          <a href="9.2. La Marcha mas Grande.jpeg" target="_blank">
+            <img src="9.2. La Marcha mas Grande.jpeg" class="thumb" alt="La Marcha más Grande">
           </a>
           <figcaption>La Marcha más Grande<br><small><em>(BBC / Susana Hidalgo)</em></small></figcaption>
         </figure>
@@ -70,24 +70,24 @@
     <div class="row">
       <div class="col-sm-6 col-md-4 mb-4">
         <figure>
-          <a href="10.1.1. The agreement 1 (BCN).jpeg" target="_blank">
-            <img src="10.1.1. The agreement 1 (BCN).jpeg" class="thumb" alt="The agreement 1">
+          <a href="10.1.1. The agreement 1.jpeg" target="_blank">
+            <img src="10.1.1. The agreement 1.jpeg" class="thumb" alt="The agreement 1">
           </a>
           <figcaption>The agreement 1<br><small><em>(BCN)</em></small></figcaption>
         </figure>
       </div>
       <div class="col-sm-6 col-md-4 mb-4">
         <figure>
-          <a href="10.1.2. The agreement 2 (BCN).jpeg" target="_blank">
-            <img src="10.1.2. The agreement 2 (BCN).jpeg" class="thumb" alt="The agreement 2">
+          <a href="10.1.2. The agreement 2 .jpeg" target="_blank">
+            <img src="10.1.2. The agreement 2 .jpeg" class="thumb" alt="The agreement 2">
           </a>
           <figcaption>The agreement 2<br><small><em>(BCN)</em></small></figcaption>
         </figure>
       </div>
       <div class="col-sm-6 col-md-4 mb-4">
         <figure>
-          <a href="10.2. The announcment (La Tercera/Richard Ulloa).jpeg" target="_blank">
-            <img src="10.2. The announcment (La Tercera/Richard Ulloa).jpeg" class="thumb" alt="The announcement">
+          <a href="10.2. The announcment.jpeg" target="_blank">
+            <img src="10.2. The announcment.jpeg" class="thumb" alt="The announcement">
           </a>
           <figcaption>The announcement<br><small><em>(La Tercera / Richard Ulloa)</em></small></figcaption>
         </figure>
@@ -101,32 +101,32 @@
     <div class="row">
       <div class="col-sm-6 col-md-4 mb-4">
         <figure>
-          <a href="12.1. Inauguracion (Crónica Digital/PL).jpeg" target="_blank">
-            <img src="12.1. Inauguracion (Crónica Digital/PL).jpeg" class="thumb" alt="Inauguración Convención Constitucional">
+          <a href="12.1. Inauguracion convención constitucional.jpeg" target="_blank">
+            <img src="12.1. Inauguracion convención constitucional.jpeg" class="thumb" alt="Inauguración Convención Constitucional">
           </a>
           <figcaption>Inauguración Convención Constitucional<br><small><em>(Crónica Digital / PL)</em></small></figcaption>
         </figure>
       </div>
       <div class="col-sm-6 col-md-4 mb-4">
         <figure>
-          <a href="12.2. Elisa Loncon (Time/Cristian Soto Quiroz).jpeg" target="_blank">
-            <img src="12.2. Elisa Loncon (Time/Cristian Soto Quiroz).jpeg" class="thumb" alt="Elisa Loncón">
+          <a href="12.2. Elisa Loncon.jpeg" target="_blank">
+            <img src="12.2. Elisa Loncon.jpeg" class="thumb" alt="Elisa Loncón">
           </a>
           <figcaption>Elisa Loncón<br><small><em>(Time / Cristian Soto Quiroz)</em></small></figcaption>
         </figure>
       </div>
       <div class="col-sm-6 col-md-4 mb-4">
         <figure>
-          <a href="12.3. La mesa (Twitter/@Jaime_Bassa).jpeg" target="_blank">
-            <img src="12.3. La mesa (Twitter/@Jaime_Bassa).jpeg" class="thumb" alt="La mesa">
+          <a href="12.3. La mesa.jpeg" target="_blank">
+            <img src="12.3. La mesa.jpeg" class="thumb" alt="La mesa (Ch.12)">
           </a>
           <figcaption>La mesa<br><small><em>(Twitter / @Jaime_Bassa)</em></small></figcaption>
         </figure>
       </div>
       <div class="col-sm-6 col-md-4 mb-4">
         <figure>
-          <a href="12.4. Dinosours (Instagram/@bailapikachu.oficial).jpg" target="_blank">
-            <img src="12.4. Dinosours (Instagram/@bailapikachu.oficial).jpg" class="thumb" alt="Dinosours">
+          <a href="12.4. Dinosours.jpeg" target="_blank">
+            <img src="12.4. Dinosours.jpeg" class="thumb" alt="Dinosours">
           </a>
           <figcaption>Dinosours<br><small><em>(Instagram / @bailapikachu.oficial)</em></small></figcaption>
         </figure>
@@ -140,8 +140,8 @@
     <div class="row">
       <div class="col-sm-6 col-md-4 mb-4">
         <figure>
-          <a href="14.1. Depolo (El Mercurio/Héctor Aravena).jpeg" target="_blank">
-            <img src="14.1. Depolo (El Mercurio/Héctor Aravena).jpeg" class="thumb" alt="Depolo">
+          <a href="14.1. Depolo.jpeg" target="_blank">
+            <img src="14.1. Depolo.jpeg" class="thumb" alt="Depolo">
           </a>
           <figcaption>Depolo<br><small><em>(El Mercurio / Héctor Aravena)</em></small></figcaption>
         </figure>
@@ -155,8 +155,8 @@
     <div class="row">
       <div class="col-sm-6 col-md-4 mb-4">
         <figure>
-          <a href="15.1. - Consejo Constitucional Expertos (La Tercera).jpeg" target="_blank">
-            <img src="15.1. - Consejo Constitucional Expertos (La Tercera).jpeg" class="thumb" alt="Consejo Constitucional Expertos">
+          <a href="15.1. - Consejo Constitucional Expertos.jpeg" target="_blank">
+            <img src="15.1. - Consejo Constitucional Expertos.jpeg" class="thumb" alt="Consejo Constitucional Expertos">
           </a>
           <figcaption>Consejo Constitucional Expertos<br><small><em>(La Tercera)</em></small></figcaption>
         </figure>
@@ -171,16 +171,16 @@
       </div>
       <div class="col-sm-6 col-md-4 mb-4">
         <figure>
-          <a href="15.3. La mesa (Twitter/@Procesoconsti23).jpg" target="_blank">
-            <img src="15.3. La mesa (Twitter/@Procesoconsti23).jpg" class="thumb" alt="La mesa (Chapter 15)">
+          <a href="15.3. La mesa.jpeg" target="_blank">
+            <img src="15.3. La mesa.jpeg" class="thumb" alt="La mesa (Ch.15)">
           </a>
           <figcaption>La mesa<br><small><em>(Twitter / @Procesoconsti23)</em></small></figcaption>
         </figure>
       </div>
       <div class="col-sm-6 col-md-4 mb-4">
         <figure>
-          <a href="15.4. - Consejo Constitucional pleno (Procesoconstitucional.cl).jpeg" target="_blank">
-            <img src="15.4. - Consejo Constitucional pleno (Procesoconstitucional.cl).jpeg" class="thumb" alt="Consejo Constitucional pleno">
+          <a href="15.4. - Consejo Constitucional pleno.jpeg" target="_blank">
+            <img src="15.4. - Consejo Constitucional pleno.jpeg" class="thumb" alt="Consejo Constitucional pleno">
           </a>
           <figcaption>Consejo Constitucional pleno<br><small><em>(Procesoconstitucional.cl)</em></small></figcaption>
         </figure>
