--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -47,8 +47,8 @@
     <div class="row">
       <div class="col-sm-6 col-md-4 mb-4">
         <figure>
-          <a href="9.1. No estamos en guerra.jpg" target="_blank">
-            <img src="9.1. No estamos en guerra.jpg" class="thumb" alt="No estamos en guerra">
+          <a href="9.1. No estamos en guerra.jpeg" target="_blank">
+            <img src="9.1. No estamos en guerra.jpeg" class="thumb" alt="No estamos en guerra">
           </a>
           <figcaption>No estamos en guerra<br><small><em>(YouTube / Galería CIMA)</em></small></figcaption>
         </figure>
