--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -101,8 +101,8 @@
     <div class="row">
       <div class="col-sm-6 col-md-4 mb-4">
         <figure>
-          <a href="12.1. Inauguracion convención constitucional.jpeg" target="_blank">
-            <img src="12.1. Inauguracion convención constitucional.jpeg" class="thumb" alt="Inauguración Convención Constitucional">
+          <a href="12.1. Inauguracion convencion constitucional.jpeg" target="_blank">
+            <img src="12.1. Inauguracion convencion constitucional.jpeg" class="thumb" alt="Inauguración Convención Constitucional">
           </a>
           <figcaption>Inauguración Convención Constitucional<br><small><em>(Crónica Digital / PL)</em></small></figcaption>
         </figure>
