--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -179,8 +179,8 @@
       </div>
       <div class="col-sm-6 col-md-4 mb-4">
         <figure>
-          <a href="15.4. - Consejo Constitucional pleno.jpeg" target="_blank">
-            <img src="15.4. - Consejo Constitucional pleno.jpeg" class="thumb" alt="Consejo Constitucional pleno">
+          <a href="15.4. Consejo Constitucional pleno.jpeg" target="_blank">
+            <img src="15.4. Consejo Constitucional pleno.jpeg" class="thumb" alt="Consejo Constitucional pleno">
           </a>
           <figcaption>Consejo Constitucional pleno<br><small><em>(Procesoconstitucional.cl)</em></small></figcaption>
         </figure>
