--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -38,7 +38,7 @@
     <a class="btn btn-sm btn-outline-primary" href="#ch10">Ch. 10</a>
     <a class="btn btn-sm btn-outline-primary" href="#ch12">Ch. 12</a>
     <a class="btn btn-sm btn-outline-primary" href="#ch14">Ch. 14</a>
-    <a class="btn btn-sm btn-outline-primary" href="#ch15">Ch. 15</a>
+    <a class="btn btn-sm btn-outline-primary" href="#ch16">Ch. 16</a>
   </div>
 
   <!-- Chapter 9 -->
@@ -149,38 +149,38 @@
     </div>
   </section>
 
-  <!-- Chapter 15 -->
-  <section id="ch15" class="chapter-anchor">
-    <h2 class="h5 chapter-header">Chapter 15 — From instability to realignment</h2>
+  <!-- Chapter 16 -->
+  <section id="ch16" class="chapter-anchor">
+    <h2 class="h5 chapter-header">Chapter 16 — The (second) Constitutional Council</h2>
     <div class="row">
       <div class="col-sm-6 col-md-4 mb-4">
         <figure>
-          <a href="15.1. - Consejo Constitucional Expertos.jpeg" target="_blank">
-            <img src="15.1. - Consejo Constitucional Expertos.jpeg" class="thumb" alt="Consejo Constitucional Expertos">
+          <a href="16.1. - Consejo Constitucional Expertos.jpeg" target="_blank">
+            <img src="16.1. - Consejo Constitucional Expertos.jpeg" class="thumb" alt="Consejo Constitucional Expertos">
           </a>
           <figcaption>Consejo Constitucional Expertos<br><small><em>(La Tercera)</em></small></figcaption>
         </figure>
       </div>
       <div class="col-sm-6 col-md-4 mb-4">
         <figure>
-          <a href="15.2. Beatriz Hevia.jpeg" target="_blank">
-            <img src="15.2. Beatriz Hevia.jpeg" class="thumb" alt="Beatriz Hevia">
+          <a href="16.2. Beatriz Hevia.jpeg" target="_blank">
+            <img src="16.2. Beatriz Hevia.jpeg" class="thumb" alt="Beatriz Hevia">
           </a>
           <figcaption>Beatriz Hevia<br><small><em>(El Mercurio / Archivo)</em></small></figcaption>
         </figure>
       </div>
       <div class="col-sm-6 col-md-4 mb-4">
         <figure>
-          <a href="15.3. La mesa.jpeg" target="_blank">
-            <img src="15.3. La mesa.jpeg" class="thumb" alt="La mesa (Ch.15)">
+          <a href="16.3. La mesa.jpeg" target="_blank">
+            <img src="16.3. La mesa.jpeg" class="thumb" alt="La mesa (Ch.16)">
           </a>
           <figcaption>La mesa<br><small><em>(Twitter / @Procesoconsti23)</em></small></figcaption>
         </figure>
       </div>
       <div class="col-sm-6 col-md-4 mb-4">
         <figure>
-          <a href="15.4. Consejo Constitucional pleno.jpeg" target="_blank">
-            <img src="15.4. Consejo Constitucional pleno.jpeg" class="thumb" alt="Consejo Constitucional pleno">
+          <a href="16.4. Consejo Constitucional pleno.jpeg" target="_blank">
+            <img src="16.4. Consejo Constitucional pleno.jpeg" class="thumb" alt="Consejo Constitucional pleno">
           </a>
           <figcaption>Consejo Constitucional pleno<br><small><em>(Procesoconstitucional.cl)</em></small></figcaption>
         </figure>
