--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -97,7 +97,7 @@
 
   <!-- Chapter 12 -->
   <section id="ch12" class="chapter-anchor">
-    <h2 class="h5 chapter-header">Chapter 12 — The (first) constitutional convention</h2>
+    <h2 class="h5 chapter-header">Chapter 12 — The (first) Constitutional Convention</h2>
     <div class="row">
       <div class="col-sm-6 col-md-4 mb-4">
         <figure>
