--- a/theseus/index.html
+++ b/theseus/index.html
@@ -101,10 +101,10 @@
     <div class="mb-2 mb-sm-0"><strong>Resources:</strong></div>
     <div class="d-flex flex-wrap">
       <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#front-matter">Front Matter</a>
-      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#errata">Errata</a>
-      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#files">Files</a>
-      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#data">Data</a>
-      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#images">Images</a>
+      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#resources">Errata</a>
+      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#resources">Files</a>
+      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#resources">Data</a>
+      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#resources">Images</a>
       <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#chapters">Chapters</a>
     </div>
   </div>
@@ -213,7 +213,7 @@
     <hr>
 
     <!-- ===== RESOURCES ===== -->
-    <div class="container px-0" id="front-matter">
+    <div class="container px-0" id="resources">
       <h2>Resources</h2>
       <p class="text-muted">Data, Code, Documents and Others.</p>
 
