--- a/theseus/files/index.html
+++ b/theseus/files/index.html
@@ -1,211 +1,194 @@
+```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Supplementary Documents – The Theseus Paradox</title>
+  <meta charset="utf-8" />
+  <title>Theseus – Supplementary Documents</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-  <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
+  <!-- Fonts & Bootstrap (same style family as your site) -->
+  <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://kennethbunker.github.io/sass/researcher.min.css" />
 
   <style>
-    body { margin: 40px; font-family: Inconsolata, monospace; }
-    .chapter-header { margin: 2rem 0 1rem; }
+    body { font-family: "Inconsolata", monospace; }
     .jumpbar .btn { margin-right: .5rem; margin-bottom: .5rem; }
-    .chapter-anchor { scroll-margin-top: 80px; }
-    .list-group-item { display: flex; justify-content: space-between; align-items: center; }
-    .doc-name { margin: 0; font-size: 0.98rem; }
-    .badge-pill { font-size: 0.75rem; }
+    .chapter-card { border: 1px solid #999; border-radius: 12px; padding: 24px; margin: 28px auto; max-width: 900px; }
+    .chapter-title { text-transform: uppercase; letter-spacing: .02em; }
+    .file-list .list-group-item a { font-weight: 700; text-decoration: none; color: #0056b3; }
+    .file-list .badge { font-size: 11px; }
+    .pending { opacity: .7; }
   </style>
 </head>
+
 <body>
+  <div class="container mt-4">
+    <h1 class="mb-1">Supplementary Documents</h1>
+    <p class="text-muted">Direct-download links. Display names remove numbering, dots, and spaces (as requested).</p>
 
-<div class="container">
-  <h1 class="h3 mb-3">Supplementary Documents by Chapter</h1>
-  <p class="text-muted">Click to view/download. All files are referenced from the same folder as this page.</p>
+    <!-- Jump bar -->
+    <div class="alert alert-light border jumpbar">
+      <strong>Jump to chapter:</strong>
+      <a class="btn btn-sm btn-outline-primary" href="#ch2">2</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch3">3</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch8">8</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch9">9</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch10">10</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch11">11</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch12">12</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch14">14</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch15">15</a>
+      <a class="btn btn-sm btn-outline-primary" href="#ch16">16</a>
+    </div>
 
-  <!-- Jump bar -->
-  <div class="jumpbar mb-4">
-    <a class="btn btn-sm btn-outline-primary" href="#ch2">Ch. 2</a>
-    <a class="btn btn-sm btn-outline-primary" href="#ch3">Ch. 3</a>
-    <a class="btn btn-sm btn-outline-primary" href="#ch8">Ch. 8</a>
-    <a class="btn btn-sm btn-outline-primary" href="#ch9">Ch. 9</a>
-    <a class="btn btn-sm btn-outline-primary" href="#ch10">Ch. 10</a>
-    <a class="btn btn-sm btn-outline-primary" href="#ch11">Ch. 11</a>
-    <a class="btn btn-sm btn-outline-primary" href="#ch12">Ch. 12</a>
-    <a class="btn btn-sm btn-outline-primary" href="#ch14">Ch. 14</a>
-    <a class="btn btn-sm btn-outline-primary" href="#ch15">Ch. 15</a>
-    <a class="btn btn-sm btn-outline-primary" href="#ch16">Ch. 16</a>
+    <!-- CHAPTER 2 -->
+    <section id="ch2" class="chapter-card">
+      <h3 class="chapter-title mb-3">Chapter 2</h3>
+      <ul class="list-group file-list">
+        <li class="list-group-item d-flex justify-content-between align-items-center">
+          <a href="https://drive.google.com/uc?export=download&id=1TZaVV3KKOSSrIKPAqKbupu6AVuKChB3g" download>ArturoValenzuela</a>
+          <span class="badge badge-primary">PDF</span>
+        </li>
+      </ul>
+    </section>
+
+    <!-- CHAPTER 3 -->
+    <section id="ch3" class="chapter-card">
+      <h3 class="chapter-title mb-3">Chapter 3</h3>
+      <ul class="list-group file-list">
+        <li class="list-group-item d-flex justify-content-between align-items-center">
+          <a href="https://drive.google.com/uc?export=download&id=1iYznm46wfBfa74nIauaLICf79Fl9P7Sj" download>Elladrillo</a>
+          <span class="badge badge-primary">PDF</span>
+        </li>
+      </ul>
+    </section>
+
+    <!-- CHAPTER 8 -->
+    <section id="ch8" class="chapter-card">
+      <h3 class="chapter-title mb-3">Chapter 8</h3>
+      <ul class="list-group file-list">
+        <li class="list-group-item d-flex justify-content-between align-items-center">
+          <a href="https://drive.google.com/uc?export=download&id=1SJEs00jVYN1ewfE-QfYSPclMPaNw-yV1" download>BasesCiudadanasparalaNuevaConstitución(boletín11617-08)</a>
+          <span class="badge badge-primary">PDF</span>
+        </li>
+      </ul>
+    </section>
+
+    <!-- CHAPTER 9 -->
+    <section id="ch9" class="chapter-card">
+      <h3 class="chapter-title mb-3">Chapter 9</h3>
+      <ul class="list-group file-list">
+        <li class="list-group-item d-flex justify-content-between align-items-center">
+          <a href="https://drive.google.com/uc?export=download&id=1LS98UBztGmRprOtubZaHM0SFbhopyQHO" download>Ley42470(resoluciónn2)</a>
+          <span class="badge badge-primary">PDF</span>
+        </li>
+      </ul>
+    </section>
+
+    <!-- CHAPTER 10 -->
+    <section id="ch10" class="chapter-card">
+      <h3 class="chapter-title mb-3">Chapter 10</h3>
+      <ul class="list-group file-list">
+        <li class="list-group-item d-flex justify-content-between align-items-center">
+          <a href="https://drive.google.com/uc?export=download&id=1ou1sox1QtWe7rQtUamps81I6adqQEQ78" download>BasesCiudadanasparalaNuevaConstitución</a>
+          <span class="badge badge-primary">PDF</span>
+        </li>
+        <li class="list-group-item d-flex justify-content-between align-items-center">
+          <a href="https://drive.google.com/uc?export=download&id=15vI8grF3w6tVotRGAdw30hPsv8rAM0be" download>NuevaAgendaSocial(comunicado123766)</a>
+          <span class="badge badge-primary">PDF</span>
+        </li>
+        <li class="list-group-item d-flex justify-content-between align-items-center">
+          <a href="https://drive.google.com/uc?export=download&id=1NCBXJmr3_uRY41eegkb203_SVapPTxj8" download>AcuerdoPorlaPazSocialylaNuevaConstitución</a>
+          <span class="badge badge-primary">PDF</span>
+        </li>
+      </ul>
+    </section>
+
+    <!-- CHAPTER 11 -->
+    <section id="ch11" class="chapter-card">
+      <h3 class="chapter-title mb-3">Chapter 11</h3>
+      <ul class="list-group file-list">
+        <li class="list-group-item d-flex justify-content-between align-items-center">
+          <a href="https://drive.google.com/uc?export=download&id=1CTnch1deKo58Aa_NOu39vXo78N7aoeTt" download>PrimerdiscursodeBoric</a>
+          <span class="badge badge-primary">PDF</span>
+        </li>
+      </ul>
+    </section>
+
+    <!-- CHAPTER 12 -->
+    <section id="ch12" class="chapter-card">
+      <h3 class="chapter-title mb-3">Chapter 12</h3>
+      <ul class="list-group file-list">
+        <li class="list-group-item d-flex justify-content-between align-items-center">
+          <a href="https://drive.google.com/uc?export=download&id=1-pFhQuJA9E1sCKFjbVSTOIy6OjpZL_mL" download>InformeFinal</a>
+          <span class="badge badge-primary">PDF</span>
+        </li>
+        <li class="list-group-item d-flex justify-content-between align-items-center">
+          <a href="https://drive.google.com/uc?export=download&id=19eOR-MN8SLneKHbhVAYDwnAxZ9qcLSct" download>PropuestaNuevaConstitucion2022</a>
+          <span class="badge badge-primary">PDF</span>
+        </li>
+        <li class="list-group-item d-flex justify-content-between align-items-center">
+          <a href="https://drive.google.com/uc?export=download&id=1XvHVe0C_NaOA0pVE5t8KibpNoyxeQxnG" download>ValenzuelaEverke</a>
+          <span class="badge badge-primary">PDF</span>
+        </li>
+      </ul>
+    </section>
+
+    <!-- CHAPTER 14 -->
+    <section id="ch14" class="chapter-card">
+      <h3 class="chapter-title mb-3">Chapter 14</h3>
+      <ul class="list-group file-list">
+        <li class="list-group-item d-flex justify-content-between align-items-center">
+          <a href="https://drive.google.com/uc?export=download&id=1Zm53CCGUYE7RXkLMMmDWZg6Qaoyi8Cj_" download>AcuerdoporChile</a>
+          <span class="badge badge-primary">PDF</span>
+        </li>
+      </ul>
+    </section>
+
+    <!-- CHAPTER 15 -->
+    <section id="ch15" class="chapter-card">
+      <h3 class="chapter-title mb-3">Chapter 15</h3>
+      <ul class="list-group file-list">
+        <li class="list-group-item d-flex justify-content-between align-items-center">
+          <a href="https://drive.google.com/uc?export=download&id=1d62jRjk6bE1HFgrzStWRy5wT1yY9Fwcx" download>Impactoseconómicosyfinancierosderetirosdeahorrosprevisionales</a>
+          <span class="badge badge-primary">PDF</span>
+        </li>
+
+        <!-- Placeholders (awaiting links) -->
+        <li class="list-group-item d-flex justify-content-between align-items-center pending">
+          <a href="#" aria-disabled="true">InformedeVíctimasdeHomicidiosConsumados2024</a>
+          <span class="badge badge-secondary">link pending</span>
+        </li>
+        <li class="list-group-item d-flex justify-content-between align-items-center pending">
+          <a href="#" aria-disabled="true">2023-Impactoretiros(Congres-Hacienda)</a>
+          <span class="badge badge-secondary">link pending</span>
+        </li>
+        <li class="list-group-item d-flex justify-content-between align-items-center pending">
+          <a href="#" aria-disabled="true">VergaraandUgarte2023-Migracióndelincuencia(CEP)</a>
+          <span class="badge badge-secondary">link pending</span>
+        </li>
+      </ul>
+    </section>
+
+    <!-- CHAPTER 16 -->
+    <section id="ch16" class="chapter-card">
+      <h3 class="chapter-title mb-3">Chapter 16</h3>
+      <ul class="list-group file-list">
+        <!-- Placeholder (awaiting link) -->
+        <li class="list-group-item d-flex justify-content-between align-items-center pending">
+          <a href="#" aria-disabled="true">PropuestaNuevaConstitucion2023</a>
+          <span class="badge badge-secondary">link pending</span>
+        </li>
+      </ul>
+    </section>
+
+    <hr />
+    <p class="text-muted small">
+      Notes: If any link shows a Google Drive quota or permission message, try again later or host the file in a different service.
+      <!-- Assumption: IDs were mapped in the order you pasted links to match your original file list. Swap IDs in the hrefs if any label is mismatched. -->
+    </p>
   </div>
-
-  <!-- Chapter 2 -->
-  <section id="ch2" class="chapter-anchor">
-    <h2 class="h5 chapter-header">Chapter 2 — The 1980 Constitution</h2>
-    <ul class="list-group mb-4">
-      <li class="list-group-item">
-        <a href="2. Arturo Valenzuela.pdf" class="doc-name" target="_blank">Arturo Valenzuela</a>
-        <span class="badge badge-light badge-pill">PDF</span>
-      </li>
-    </ul>
-  </section>
-
-  <!-- Chapter 3 -->
-  <section id="ch3" class="chapter-anchor">
-    <h2 class="h5 chapter-header">Chapter 3 — Neoliberalism: Problem or solution?</h2>
-    <ul class="list-group mb-4">
-      <li class="list-group-item">
-        <a href="3_fx. El ladrillo.pdf" class="doc-name" target="_blank">El ladrillo</a>
-        <span class="badge badge-light badge-pill">PDF</span>
-      </li>
-    </ul>
-  </section>
-
-  <!-- Chapter 8 -->
-  <section id="ch8" class="chapter-anchor">
-    <h2 class="h5 chapter-header">Chapter 8 — Emergence of a rupturist discourse</h2>
-    <ul class="list-group mb-4">
-      <li class="list-group-item">
-        <a href="8_f19. Bases Ciudadanas para la Nueva Constitución (boletín 11.617-08).pdf" class="doc-name" target="_blank">
-          Bases Ciudadanas para la Nueva Constitución (boletín 11.617-08)
-        </a>
-        <span class="badge badge-light badge-pill">PDF</span>
-      </li>
-    </ul>
-  </section>
-
-  <!-- Chapter 9 -->
-  <section id="ch9" class="chapter-anchor">
-    <h2 class="h5 chapter-header">Chapter 9 — October 18, 2019</h2>
-    <ul class="list-group mb-4">
-      <li class="list-group-item">
-        <a href="9_f3. Ley 42.470 (resolución n. 2).pdf" class="doc-name" target="_blank">
-          Ley 42.470 (resolución n. 2)
-        </a>
-        <span class="badge badge-light badge-pill">PDF</span>
-      </li>
-    </ul>
-  </section>
-
-  <!-- Chapter 10 -->
-  <section id="ch10" class="chapter-anchor">
-    <h2 class="h5 chapter-header">Chapter 10 — The constitutional design</h2>
-    <ul class="list-group mb-4">
-      <li class="list-group-item">
-        <a href="10_f3. Bases Ciudadanas para la Nueva Constitución.pdf" class="doc-name" target="_blank">
-          Bases Ciudadanas para la Nueva Constitución
-        </a>
-        <span class="badge badge-light badge-pill">PDF</span>
-      </li>
-      <li class="list-group-item">
-        <a href="10_f5. Nueva Agenda Social (comunicado 123766).pdf" class="doc-name" target="_blank">
-          Nueva Agenda Social (comunicado 123766)
-        </a>
-        <span class="badge badge-light badge-pill">PDF</span>
-      </li>
-      <li class="list-group-item">
-        <a href="10_f12. Acuerdo Por la Paz Social y la Nueva Constitución.pdf" class="doc-name" target="_blank">
-          Acuerdo Por la Paz Social y la Nueva Constitución
-        </a>
-        <span class="badge badge-light badge-pill">PDF</span>
-      </li>
-    </ul>
-  </section>
-
-  <!-- Chapter 11 -->
-  <section id="ch11" class="chapter-anchor">
-    <h2 class="h5 chapter-header">Chapter 11 — The rise of Gabriel Boric</h2>
-    <ul class="list-group mb-4">
-      <li class="list-group-item">
-        <a href="11_f12. Primer discurso de Boric.pdf" class="doc-name" target="_blank">
-          Primer discurso de Boric
-        </a>
-        <span class="badge badge-light badge-pill">PDF</span>
-      </li>
-    </ul>
-  </section>
-
-  <!-- Chapter 12 -->
-  <section id="ch12" class="chapter-anchor">
-    <h2 class="h5 chapter-header">Chapter 12 — The (first) constitutional convention</h2>
-    <ul class="list-group mb-4">
-      <li class="list-group-item">
-        <a href="12_f4. Informe Final.pdf" class="doc-name" target="_blank">Informe Final</a>
-        <span class="badge badge-light badge-pill">PDF</span>
-      </li>
-      <li class="list-group-item">
-        <a href="12_fx. Propuesta Nueva Constitucion 2022.pdf" class="doc-name" target="_blank">
-          Propuesta Nueva Constitución 2022
-        </a>
-        <span class="badge badge-light badge-pill">PDF</span>
-      </li>
-      <li class="list-group-item">
-        <a href="12. Valenzuela Everke.pdf" class="doc-name" target="_blank">Valenzuela Everke</a>
-        <span class="badge badge-light badge-pill">PDF</span>
-      </li>
-    </ul>
-  </section>
-
-  <!-- Chapter 14 -->
-  <section id="ch14" class="chapter-anchor">
-    <h2 class="h5 chapter-header">Chapter 14 — Constitutional resurrection</h2>
-    <ul class="list-group mb-4">
-      <li class="list-group-item">
-        <a href="14_fx. Acuerdo por Chile.pdf" class="doc-name" target="_blank">Acuerdo por Chile</a>
-        <span class="badge badge-light badge-pill">PDF</span>
-      </li>
-    </ul>
-  </section>
-
-  <!-- Chapter 15 -->
-  <section id="ch15" class="chapter-anchor">
-    <h2 class="h5 chapter-header">Chapter 15 — From instability to realignment</h2>
-    <ul class="list-group mb-4">
-      <li class="list-group-item">
-        <a href="15_f2. Impactos económicos y financieros de retiros de ahorros previsionales.pdf" class="doc-name" target="_blank">
-          Impactos económicos y financieros de retiros de ahorros previsionales
-        </a>
-        <span class="badge badge-light badge-pill">PDF</span>
-      </li>
-      <li class="list-group-item">
-        <a href="15_f4. Informe de Víctimas de Homicidios Consumados 2024.pdf" class="doc-name" target="_blank">
-          Informe de Víctimas de Homicidios Consumados 2024
-        </a>
-        <span class="badge badge-light badge-pill">PDF</span>
-      </li>
-      <li class="list-group-item">
-        <a href="15. 2023 - Impacto retiros (Congres-Hacienda).pdf" class="doc-name" target="_blank">
-          2023 - Impacto retiros (Congres-Hacienda)
-        </a>
-        <span class="badge badge-light badge-pill">PDF</span>
-      </li>
-      <li class="list-group-item">
-        <a href="15. Vergara and Ugarte. 2023 - Migración delincuencia (CEP).pdf" class="doc-name" target="_blank">
-          Vergara and Ugarte — 2023 Migración y delincuencia (CEP)
-        </a>
-        <span class="badge badge-light badge-pill">PDF</span>
-      </li>
-    </ul>
-  </section>
-
-  <!-- Chapter 16 -->
-  <section id="ch16" class="chapter-anchor">
-    <h2 class="h5 chapter-header">Chapter 16 — The (second) constitutional council</h2>
-    <ul class="list-group mb-5">
-      <li class="list-group-item">
-        <a href="16_fx. Propuesta Nueva Constitucion 2023.pdf" class="doc-name" target="_blank">
-          Propuesta Nueva Constitución 2023
-        </a>
-        <span class="badge badge-light badge-pill">PDF</span>
-      </li>
-    </ul>
-  </section>
-
-  <hr>
-  <div class="text-center my-4">
-    <a class="btn btn-sm btn-outline-secondary" href="#top">Back to top</a>
-    <a class="btn btn-sm btn-outline-primary ml-2" href="https://kennethbunker.github.io/theseus/">Back to book page</a>
-  </div>
-</div>
-
 </body>
 </html>
+```
