--- a/theseus/files/index.html
+++ b/theseus/files/index.html
@@ -1,33 +1,26 @@
-```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
   <title>Theseus – Supplementary Documents</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-
-  <!-- Fonts & Bootstrap (same style family as your site) -->
   <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://kennethbunker.github.io/sass/researcher.min.css" />
-
   <style>
-    body { font-family: "Inconsolata", monospace; }
     .jumpbar .btn { margin-right: .5rem; margin-bottom: .5rem; }
     .chapter-card { border: 1px solid #999; border-radius: 12px; padding: 24px; margin: 28px auto; max-width: 900px; }
     .chapter-title { text-transform: uppercase; letter-spacing: .02em; }
-    .file-list .list-group-item a { font-weight: 700; text-decoration: none; color: #0056b3; }
+    .file-list .list-group-item a { font-weight: 700; text-decoration: none; }
     .file-list .badge { font-size: 11px; }
     .pending { opacity: .7; }
   </style>
 </head>
-
 <body>
   <div class="container mt-4">
     <h1 class="mb-1">Supplementary Documents</h1>
-    <p class="text-muted">Direct-download links. Display names remove numbering, dots, and spaces (as requested).</p>
+    <p class="text-muted">Direct-download links.</p>
 
-    <!-- Jump bar -->
     <div class="alert alert-light border jumpbar">
       <strong>Jump to chapter:</strong>
       <a class="btn btn-sm btn-outline-primary" href="#ch2">2</a>
@@ -42,122 +35,111 @@
       <a class="btn btn-sm btn-outline-primary" href="#ch16">16</a>
     </div>
 
-    <!-- CHAPTER 2 -->
     <section id="ch2" class="chapter-card">
       <h3 class="chapter-title mb-3">Chapter 2</h3>
       <ul class="list-group file-list">
         <li class="list-group-item d-flex justify-content-between align-items-center">
-          <a href="https://drive.google.com/uc?export=download&id=1TZaVV3KKOSSrIKPAqKbupu6AVuKChB3g" download>ArturoValenzuela</a>
+          <a href="https://drive.google.com/uc?export=download&id=1TZaVV3KKOSSrIKPAqKbupu6AVuKChB3g" download rel="noopener">ArturoValenzuela</a>
           <span class="badge badge-primary">PDF</span>
         </li>
       </ul>
     </section>
 
-    <!-- CHAPTER 3 -->
     <section id="ch3" class="chapter-card">
       <h3 class="chapter-title mb-3">Chapter 3</h3>
       <ul class="list-group file-list">
         <li class="list-group-item d-flex justify-content-between align-items-center">
-          <a href="https://drive.google.com/uc?export=download&id=1iYznm46wfBfa74nIauaLICf79Fl9P7Sj" download>Elladrillo</a>
+          <a href="https://drive.google.com/uc?export=download&id=1iYznm46wfBfa74nIauaLICf79Fl9P7Sj" download rel="noopener">Elladrillo</a>
           <span class="badge badge-primary">PDF</span>
         </li>
       </ul>
     </section>
 
-    <!-- CHAPTER 8 -->
     <section id="ch8" class="chapter-card">
       <h3 class="chapter-title mb-3">Chapter 8</h3>
       <ul class="list-group file-list">
         <li class="list-group-item d-flex justify-content-between align-items-center">
-          <a href="https://drive.google.com/uc?export=download&id=1SJEs00jVYN1ewfE-QfYSPclMPaNw-yV1" download>BasesCiudadanasparalaNuevaConstitución(boletín11617-08)</a>
+          <a href="https://drive.google.com/uc?export=download&id=1SJEs00jVYN1ewfE-QfYSPclMPaNw-yV1" download rel="noopener">BasesCiudadanasparalaNuevaConstitución(boletín11617-08)</a>
           <span class="badge badge-primary">PDF</span>
         </li>
       </ul>
     </section>
 
-    <!-- CHAPTER 9 -->
     <section id="ch9" class="chapter-card">
       <h3 class="chapter-title mb-3">Chapter 9</h3>
       <ul class="list-group file-list">
         <li class="list-group-item d-flex justify-content-between align-items-center">
-          <a href="https://drive.google.com/uc?export=download&id=1LS98UBztGmRprOtubZaHM0SFbhopyQHO" download>Ley42470(resoluciónn2)</a>
+          <a href="https://drive.google.com/uc?export=download&id=1LS98UBztGmRprOtubZaHM0SFbhopyQHO" download rel="noopener">Ley42470(resoluciónn2)</a>
           <span class="badge badge-primary">PDF</span>
         </li>
       </ul>
     </section>
 
-    <!-- CHAPTER 10 -->
     <section id="ch10" class="chapter-card">
       <h3 class="chapter-title mb-3">Chapter 10</h3>
       <ul class="list-group file-list">
         <li class="list-group-item d-flex justify-content-between align-items-center">
-          <a href="https://drive.google.com/uc?export=download&id=1ou1sox1QtWe7rQtUamps81I6adqQEQ78" download>BasesCiudadanasparalaNuevaConstitución</a>
+          <a href="https://drive.google.com/uc?export=download&id=1ou1sox1QtWe7rQtUamps81I6adqQEQ78" download rel="noopener">BasesCiudadanasparalaNuevaConstitución</a>
           <span class="badge badge-primary">PDF</span>
         </li>
         <li class="list-group-item d-flex justify-content-between align-items-center">
-          <a href="https://drive.google.com/uc?export=download&id=15vI8grF3w6tVotRGAdw30hPsv8rAM0be" download>NuevaAgendaSocial(comunicado123766)</a>
+          <a href="https://drive.google.com/uc?export=download&id=15vI8grF3w6tVotRGAdw30hPsv8rAM0be" download rel="noopener">NuevaAgendaSocial(comunicado123766)</a>
           <span class="badge badge-primary">PDF</span>
         </li>
         <li class="list-group-item d-flex justify-content-between align-items-center">
-          <a href="https://drive.google.com/uc?export=download&id=1NCBXJmr3_uRY41eegkb203_SVapPTxj8" download>AcuerdoPorlaPazSocialylaNuevaConstitución</a>
+          <a href="https://drive.google.com/uc?export=download&id=1NCBXJmr3_uRY41eegkb203_SVapPTxj8" download rel="noopener">AcuerdoPorlaPazSocialylaNuevaConstitución</a>
           <span class="badge badge-primary">PDF</span>
         </li>
       </ul>
     </section>
 
-    <!-- CHAPTER 11 -->
     <section id="ch11" class="chapter-card">
       <h3 class="chapter-title mb-3">Chapter 11</h3>
       <ul class="list-group file-list">
         <li class="list-group-item d-flex justify-content-between align-items-center">
-          <a href="https://drive.google.com/uc?export=download&id=1CTnch1deKo58Aa_NOu39vXo78N7aoeTt" download>PrimerdiscursodeBoric</a>
+          <a href="https://drive.google.com/uc?export=download&id=1CTnch1deKo58Aa_NOu39vXo78N7aoeTt" download rel="noopener">PrimerdiscursodeBoric</a>
           <span class="badge badge-primary">PDF</span>
         </li>
       </ul>
     </section>
 
-    <!-- CHAPTER 12 -->
     <section id="ch12" class="chapter-card">
       <h3 class="chapter-title mb-3">Chapter 12</h3>
       <ul class="list-group file-list">
         <li class="list-group-item d-flex justify-content-between align-items-center">
-          <a href="https://drive.google.com/uc?export=download&id=1-pFhQuJA9E1sCKFjbVSTOIy6OjpZL_mL" download>InformeFinal</a>
+          <a href="https://drive.google.com/uc?export=download&id=1-pFhQuJA9E1sCKFjbVSTOIy6OjpZL_mL" download rel="noopener">InformeFinal</a>
           <span class="badge badge-primary">PDF</span>
         </li>
         <li class="list-group-item d-flex justify-content-between align-items-center">
-          <a href="https://drive.google.com/uc?export=download&id=19eOR-MN8SLneKHbhVAYDwnAxZ9qcLSct" download>PropuestaNuevaConstitucion2022</a>
+          <a href="https://drive.google.com/uc?export=download&id=19eOR-MN8SLneKHbhVAYDwnAxZ9qcLSct" download rel="noopener">PropuestaNuevaConstitucion2022</a>
           <span class="badge badge-primary">PDF</span>
         </li>
         <li class="list-group-item d-flex justify-content-between align-items-center">
-          <a href="https://drive.google.com/uc?export=download&id=1XvHVe0C_NaOA0pVE5t8KibpNoyxeQxnG" download>ValenzuelaEverke</a>
+          <a href="https://drive.google.com/uc?export=download&id=1XvHVe0C_NaOA0pVE5t8KibpNoyxeQxnG" download rel="noopener">ValenzuelaEverke</a>
           <span class="badge badge-primary">PDF</span>
         </li>
       </ul>
     </section>
 
-    <!-- CHAPTER 14 -->
     <section id="ch14" class="chapter-card">
       <h3 class="chapter-title mb-3">Chapter 14</h3>
       <ul class="list-group file-list">
         <li class="list-group-item d-flex justify-content-between align-items-center">
-          <a href="https://drive.google.com/uc?export=download&id=1Zm53CCGUYE7RXkLMMmDWZg6Qaoyi8Cj_" download>AcuerdoporChile</a>
+          <a href="https://drive.google.com/uc?export=download&id=1Zm53CCGUYE7RXkLMMmDWZg6Qaoyi8Cj_" download rel="noopener">AcuerdoporChile</a>
           <span class="badge badge-primary">PDF</span>
         </li>
       </ul>
     </section>
 
-    <!-- CHAPTER 15 -->
     <section id="ch15" class="chapter-card">
       <h3 class="chapter-title mb-3">Chapter 15</h3>
       <ul class="list-group file-list">
         <li class="list-group-item d-flex justify-content-between align-items-center">
-          <a href="https://drive.google.com/uc?export=download&id=1d62jRjk6bE1HFgrzStWRy5wT1yY9Fwcx" download>Impactoseconómicosyfinancierosderetirosdeahorrosprevisionales</a>
+          <a href="https://drive.google.com/uc?export=download&id=1d62jRjk6bE1HFgrzStWRy5wT1yY9Fwcx" download rel="noopener">Impactoseconómicosyfinancierosderetirosdeahorrosprevisionales</a>
           <span class="badge badge-primary">PDF</span>
         </li>
-
-        <!-- Placeholders (awaiting links) -->
         <li class="list-group-item d-flex justify-content-between align-items-center pending">
-          <a href="#" aria-disabled="true">InformedeVíctimasdeHomicidiosConsumados2024</a>
+          <a href="#" aria-disabled="true">InformedeVíctimasdeHomicidiosConsumados2024</a>
           <span class="badge badge-secondary">link pending</span>
         </li>
         <li class="list-group-item d-flex justify-content-between align-items-center pending">
@@ -165,30 +147,21 @@
           <span class="badge badge-secondary">link pending</span>
         </li>
         <li class="list-group-item d-flex justify-content-between align-items-center pending">
-          <a href="#" aria-disabled="true">VergaraandUgarte2023-Migracióndelincuencia(CEP)</a>
+          <a href="#" aria-disabled="true">VergarayUgarte2023-Migracióndelincuencia(CEP)</a>
           <span class="badge badge-secondary">link pending</span>
         </li>
       </ul>
     </section>
 
-    <!-- CHAPTER 16 -->
     <section id="ch16" class="chapter-card">
       <h3 class="chapter-title mb-3">Chapter 16</h3>
       <ul class="list-group file-list">
-        <!-- Placeholder (awaiting link) -->
         <li class="list-group-item d-flex justify-content-between align-items-center pending">
           <a href="#" aria-disabled="true">PropuestaNuevaConstitucion2023</a>
           <span class="badge badge-secondary">link pending</span>
         </li>
       </ul>
     </section>
-
-    <hr />
-    <p class="text-muted small">
-      Notes: If any link shows a Google Drive quota or permission message, try again later or host the file in a different service.
-      <!-- Assumption: IDs were mapped in the order you pasted links to match your original file list. Swap IDs in the hrefs if any label is mismatched. -->
-    </p>
   </div>
 </body>
 </html>
-```
